--- a/news.html
+++ b/news.html
@@ -69,9 +69,11 @@
                                 <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://www.blaxrew-studios.vision/mdscript-docs/">MD Script</a>
+                                <div class="dropdown-divider"></div>
+                                <h6 class="dropdown-header">Music</h6><a class="dropdown-item" href="music_lib.html">Overview</a>
                             </div>
                         </li>
-                        <li class="nav-item"><a class="nav-link active" href="news.html">News</a></li>
+                        <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
                     </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="http://admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span>
                 </div>
@@ -81,7 +83,7 @@
     <div class="bg-dark">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 text-dark"><a class="twitter-timeline" href="https://twitter.com/blaxrew?ref_src=twsrc%5Etfw">Tweets by blaxrew</a> <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
+                <div class="col-md-12 text-dark" style="margin-top: 2%;"><a class="twitter-timeline" data-lang="en" data-dnt="true" data-theme="dark" href="https://twitter.com/blaxrew?ref_src=twsrc%5Etfw">Tweets by blaxrew</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
             </div>
             <div class="row">
                 <div class="col-md-12 text-dark" style="margin-left: 42.75%;"><a href="https://twitter.com/blaxrew?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @blaxrew</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></div>
@@ -127,6 +129,7 @@
     <script src="assets/js/audioJS.js"></script>
     <script src="assets/js/Cookie-Banner.js"></script>
     <script src="assets/js/countdown-timer.js"></script>
+    <script src="assets/js/filterTable.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
     <script src="assets/js/Simple-Slider.js"></script>
     <script src="assets/js/Testimonial-Slider-9.js"></script>
