--- a/projects.html
+++ b/projects.html
@@ -64,11 +64,13 @@
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"></li>
                         <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Projects</a>
-                            <div class="dropdown-menu"><a class="dropdown-item disabled" href="projects.html">Overview</a>
+                            <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://www.blaxrew-studios.vision/mdscript-docs/">MD Script</a>
+                                <div class="dropdown-divider"></div>
+                                <h6 class="dropdown-header">Music</h6><a class="dropdown-item" href="music_lib.html">Overview</a>
                             </div>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
@@ -105,7 +107,7 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/Banner%201%201920x1080.png" style="margin-top: 5px;"></a></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"></a><img class="img-fluid" src="assets/img/Banner%201%201920x1080.png" style="margin-top: 15px;"></div>
                         <div class="col">
                             <h3 class="name">LaS</h3>
                             <p class="text-white-50 description">Lights and Shadows is a mini adventure game in which you go the way of lights or shadows.<br></p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="las.html">Learn More</a>
@@ -114,7 +116,7 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 5px;"></a></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
                         <div class="col">
                             <h3 class="name">Trix Pong</h3>
                             <p class="text-white-50 description">This is a game completely developed by H4rdw4r3. It is a mini soccer game<br></p><button class="btn btn-outline-primary disabled btn-block btn-sm" type="button" style="margin-top: 5px;margin-left: 0px;" disabled="">Learn More</button>
@@ -123,7 +125,7 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 5px;"></a></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
                         <div class="col">
                             <h3 class="name">Filming Project</h3>
                             <p class="text-white-50 description">You only get access to it on request. Because it is only available for a group of persons<br></p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="about.html#contact">Contact us</a>
@@ -141,7 +143,7 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 5px;"></a></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
                         <div class="col">
                             <h3 class="name">RCB</h3>
                             <p class="text-white-50 description">Random Characteristics Battle is a minigame built in the Windows Command Prompt</p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="https://github.com/blaxrewstudios/RCB">Learn More</a>
@@ -150,10 +152,19 @@
                 </div>
                 <div class="col-sm-6 item">
                     <div class="row">
-                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 5px;"></a></div>
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
                         <div class="col">
                             <h3 class="name">Driving Simulator</h3>
-                            <p class="text-white-50 description">A driving simulator to train to drive with a trailer. (TMX Pro compatible)</p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="driving_simulator.html">Learn More</a>
+                            <p class="text-white-50 description">A driving simulator to train to drive with trailer.&nbsp;</p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="driving_simulator.html">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 item">
+                    <div class="row">
+                        <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png" style="margin-top: 15px;"></a></div>
+                        <div class="col">
+                            <h3 class="name">Music</h3>
+                            <p class="text-white-50 description">Our music compositions. Created for games, movies or just for listening</p><a class="btn btn-outline-primary btn-block btn-sm" role="button" style="margin-top: 5px;margin-left: 0px;" href="music_lib.html">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -200,6 +211,7 @@
     <script src="assets/js/audioJS.js"></script>
     <script src="assets/js/Cookie-Banner.js"></script>
     <script src="assets/js/countdown-timer.js"></script>
+    <script src="assets/js/filterTable.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
     <script src="assets/js/Simple-Slider.js"></script>
     <script src="assets/js/Testimonial-Slider-9.js"></script>
