--- a/404.html
+++ b/404.html
@@ -69,6 +69,8 @@
                                 <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://www.blaxrew-studios.vision/mdscript-docs/">MD Script</a>
+                                <div class="dropdown-divider"></div>
+                                <h6 class="dropdown-header">Music</h6><a class="dropdown-item" href="music_lib.html">Overview</a>
                             </div>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
@@ -139,6 +141,7 @@
     <script src="assets/js/audioJS.js"></script>
     <script src="assets/js/Cookie-Banner.js"></script>
     <script src="assets/js/countdown-timer.js"></script>
+    <script src="assets/js/filterTable.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
     <script src="assets/js/Simple-Slider.js"></script>
     <script src="assets/js/Testimonial-Slider-9.js"></script>
