--- a/las.html
+++ b/las.html
@@ -54,7 +54,7 @@
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 
-<body>
+<body onload="SetDate(&quot;&quot;)">
     <div class="footer-dark">
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
             <div class="container"><img src="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
@@ -66,9 +66,11 @@
                         <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
-                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item disabled" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
+                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://www.blaxrew-studios.vision/mdscript-docs/">MD Script</a>
+                                <div class="dropdown-divider"></div>
+                                <h6 class="dropdown-header">Music</h6><a class="dropdown-item" href="music_lib.html">Overview</a>
                             </div>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
@@ -125,13 +127,13 @@
                 <div class="col-md-12" style="margin-top: 10px;">
                     <div>
                         <ul class="nav nav-tabs" role="tablist">
-                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-1">Information</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-1">Information</a></li>
                             <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-2">Progress</a></li>
                             <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-3">Plans</a></li>
-                            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-4">Changelog</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-4">Changelog</a></li>
                         </ul>
                         <div class="tab-content">
-                            <div class="tab-pane" role="tabpanel" id="tab-1">
+                            <div class="tab-pane active" role="tabpanel" id="tab-1">
                                 <p class="text-left">This is a singleplayer third person controlled story adventure game.<br>Make tasks and make decisions wisely because they could lead you to the abyss. Go with or against the light. Now it's your turn. This game uses RTX!<br>Get the game as we release it if you want to know more about the story. Subscribe to the newsletter to get those information via mail.<br><br></p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-2">
@@ -140,7 +142,7 @@
                             <div class="tab-pane" role="tabpanel" id="tab-3">
                                 <p class="text-left">The future plans are the game itself.<br></p>
                             </div>
-                            <div class="tab-pane active" role="tabpanel" id="tab-4">
+                            <div class="tab-pane" role="tabpanel" id="tab-4">
                                 <p class="text-left"><strong>TEST&nbsp; VERSION</strong><br>0.0.1<br>- Initial Commit<br><br>0.0.1a<br>- Beginnings of the Light Temple<br><br>0.0.2<br>- A complete new scene<br>- Start of a questing system<br>- Start of a interaction system<br>- Average player-movement system<br><br>0.0.3<br>- Improve graphics<br>- Add popup for quest completions<br>- Add animations tp "completed" popup<br><br>0.0.4<br>- Fix to the directional light and volume<br>- Add new stuff to the scene<br><br>0.0.5<br>- Change to third person controller<br>- Add animated player</p>
                             </div>
                         </div>
@@ -263,6 +265,7 @@
     <script src="assets/js/audioJS.js"></script>
     <script src="assets/js/Cookie-Banner.js"></script>
     <script src="assets/js/countdown-timer.js"></script>
+    <script src="assets/js/filterTable.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
     <script src="assets/js/Simple-Slider.js"></script>
     <script src="assets/js/Testimonial-Slider-9.js"></script>
