--- a/404.html
+++ b/404.html
@@ -68,14 +68,14 @@
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
                                 <div class="dropdown-divider"></div>
-                                <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://www.blaxrew-studios.vision/mdscript-docs/">MD Script</a>
+                                <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://blaxrewstudios.github.io/mdscript-docs/">MD Script</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Music</h6><a class="dropdown-item" href="music_lib.html">Overview</a>
                             </div>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
-                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="http://admin.blaxrew-studios.vision" style="margin-bottom: 0px;">Open Dashboard</a></span>
+                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://bxs-admin.herokuapp.com" style="margin-bottom: 0px;">Open Dashboard</a></span>
                 </div>
             </div>
         </nav>
