--- a/driving_simulator.html
+++ b/driving_simulator.html
@@ -68,7 +68,7 @@
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
                                 <div class="dropdown-divider"></div>
-                                <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://www.blaxrew-studios.vision/mdscript-docs/">MD Script</a>
+                                <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://blaxrewstudios.github.io/mdscript-docs/">MD Script</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Music</h6><a class="dropdown-item" href="music_lib.html">Overview</a>
                             </div>
@@ -191,7 +191,7 @@
                 <p class="text-center text-white-50">Here you find&nbsp; the needed links to buy or download the game</p>
             </div>
             <div class="row articles">
-                <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1" title="Download"></a><a class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1"></a></div>
+                <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://dl.patchkit.net/d/7gimxx37pbdtjujqu8mmo" title="Download"></a><a class="action" href="https://dl.patchkit.net/d/7gimxx37pbdtjujqu8mmo/direct"></a></div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png"></a>
                     <h3 class="name">Driving Simulator</h3>
                     <p class="text-white-50 description">Download and get to it. Drive try for try and get better. Try it with connecting your TMX Pro to get a better result<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="#" title="Buy for $∞"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none">
