--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
                                 <div class="dropdown-divider"></div>
-                                <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://www.blaxrew-studios.vision/mdscript-docs/">MD Script</a>
+                                <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://blaxrewstudios.github.io/mdscript-docs/">MD Script</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Music</h6><a class="dropdown-item" href="music_lib.html">Overview</a>
                             </div>
