--- a/driving_simulator.html
+++ b/driving_simulator.html
@@ -131,16 +131,16 @@
                         </ul>
                         <div class="tab-content">
                             <div class="tab-pane active" role="tabpanel" id="tab-1">
-                                <p class="text-left">A Unity 3D Game which is using HDRP. The driving simulator is made to train to drive with a trailer. Drive using different perspectives and train on specific places without to damage anything in real-life. Try to complete missions without damaging or getting damaged by anything. Decide you wether you want to drive at night or daytime. Just choose a car, a trailer and get to it with or without a steering wheel controller. (TMX Pro compatibility tested)&nbsp;</p>
+                                <p class="text-left">A Unity 3D Game which is using URP. The driving simulator is made to train to drive with a trailer. Drive using different perspectives and train on specific places without to damage anything in real-life. Try to complete missions without damaging or getting damaged by anything. Decide you wether you want to drive at night or daytime. Just choose a car, a trailer and get to it with or without a steering wheel controller. (TMX Pro compatibility tested)&nbsp;</p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-2">
-                                <p class="text-left">The game is in progress the story is not finished at the moment. Without the story finished we can not start designing it.<br></p>
+                                <p class="text-left">The first release canditate of the alpha is out. Go and have fun with it.<br></p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-3">
-                                <p class="text-left">The future plans are the game itself.<br></p>
+                                <p class="text-left">In the future there will be more trailers to drive with. Scores may get tracked per user (global or local)<br></p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-4">
-                                <p class="text-left"><strong>TEST&nbsp; VERSION</strong><br>NONE</p>
+                                <p class="text-left"><strong>PRE-ALPHA</strong><br>0.0.1<br>Released the application's foundation<br><br>0.0.2<br>Fix a collision bug<br><br>0.1-rc.01<br>We will not list the done stuff here. It's too much since the last version.<br><br>0.1-rc.02<br>Many<br><br>0.1-rc.03<br>Fix heavy performance issues<br><br>0.1-rc.04<br>Fix audio settings<br></p>
                             </div>
                         </div>
                     </div>
@@ -156,17 +156,17 @@
                         <div class="container">
                             <h1>Coming Soon</h1>
                             <div id="clockdiv">
-                                <div class="clock-wrapper"><span class="days"><strong>10661</strong><br> </span>
+                                <div class="clock-wrapper"><span class="days"><strong>0    </strong><br> </span>
                                     <div class="smalltext">
                                         <p>Days </p>
                                     </div>
                                 </div>
-                                <div class="clock-wrapper"><span class="hours">04 </span>
+                                <div class="clock-wrapper"><span class="hours">0  </span>
                                     <div class="smalltext">
                                         <p>Hours </p>
                                     </div>
                                 </div>
-                                <div class="clock-wrapper"><span class="minutes">32 </span>
+                                <div class="clock-wrapper"><span class="minutes">0  </span>
                                     <div class="smalltext">
                                         <p>Minutes </p>
                                     </div>
@@ -178,7 +178,7 @@
                                 </div>
                             </div>
                         </div>
-                        <p>Subscribe to our newsletter and follow us&nbsp; online to find out when the game launches.<a class="btn btn-outline-primary" role="button" style="margin-top: 16px;" href="index.html#newsletter-subscribe" target="_parent">Learn More</a></p>
+                        <p>Subscribe to our newsletter and follow us&nbsp; online to find out when the next game version launches.<a class="btn btn-outline-primary" role="button" style="margin-top: 16px;" href="index.html#newsletter-subscribe" target="_parent">Learn More</a></p>
                     </div>
                 </div>
             </div>
@@ -191,10 +191,10 @@
                 <p class="text-center text-white-50">Here you find&nbsp; the needed links to buy or download the game</p>
             </div>
             <div class="row articles">
-                <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://dl.patchkit.net/d/7gimxx37pbdtjujqu8mmo" title="Download"></a><a class="action" href="https://dl.patchkit.net/d/7gimxx37pbdtjujqu8mmo/direct"></a></div>
+                <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://dl.patchkit.net/d/7gimxx37pbdtjujqu8mmo" title="Download"></a><a class="action" href="https://dl.patchkit.net/d/7gimxx37pbdtjujqu8mmo"></a></div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png"></a>
                     <h3 class="name">Driving Simulator</h3>
-                    <p class="text-white-50 description">Download and get to it. Drive try for try and get better. Try it with connecting your TMX Pro to get a better result<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="#" title="Buy for $∞"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none">
+                    <p class="text-white-50 description">Download and get to it. Drive try for try and get better. Try it with connecting your TMX Pro to get a better result<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://dl.patchkit.net/d/7gimxx37pbdtjujqu8mmo" title="Buy for $∞"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none">
                             <path d="M11 5C11 4.44772 11.4477 4 12 4C12.5523 4 13 4.44772 13 5V12.1578L16.2428 8.91501L17.657 10.3292L12.0001 15.9861L6.34326 10.3292L7.75748 8.91501L11 12.1575V5Z" fill="currentColor"></path>
                             <path d="M4 14H6V18H18V14H20V18C20 19.1046 19.1046 20 18 20H6C4.89543 20 4 19.1046 4 18V14Z" fill="currentColor"></path>
                         </svg></a><a class="action" href="#"></a>
@@ -261,7 +261,6 @@
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/audioJS.js"></script>
     <script src="assets/js/Cookie-Banner.js"></script>
-    <script src="assets/js/countdown-timer.js"></script>
     <script src="assets/js/filterTable.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
     <script src="assets/js/Simple-Slider.js"></script>
