--- a/devils-hunt.html
+++ b/devils-hunt.html
@@ -59,11 +59,11 @@
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
             <div class="container"><img src="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-2">
-                    <ul class="nav navbar-nav mr-auto">
+                    <ul class="navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"></li>
-                        <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Projects</a>
+                        <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
@@ -75,7 +75,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
-                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://bxs-admin.herokuapp.com" style="margin-bottom: 0px;">Open Dashboard</a></span>
+                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://bxs-admin.herokuapp.com/" style="margin-bottom: 0px;">Open Dashboard</a></span>
                 </div>
             </div>
         </nav>
@@ -195,15 +195,15 @@
             <div class="row articles">
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image005.png"></a>
                     <h3 class="name">Devils Hunt Software</h3>
-                    <p class="text-white-50 description">Download and start the software. Now you can play the boardgame together.<br><br>For more information click&nbsp; &nbsp;<a href="devils-hunt.html">here</a>.<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="http://admin.blaxrew-studios.vision" title="Download"><i class="material-icons">file_download</i></a><a class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1"></a>
+                    <p class="text-white-50 description">Download and start the software. Now you can play the boardgame together.<br><br>For more information click&nbsp; &nbsp;<a href="devils-hunt.html">here</a>.<br></p><a data-toggle="tooltip" data-bss-tooltip="" class="action" href="http://admin.blaxrew-studios.vision" title="Download"><i class="material-icons">file_download</i></a><a class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1"></a>
                 </div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image005.png"></a>
                     <h3 class="name">Devils Hunt DLC-Pack</h3>
-                    <p class="text-white-50 description">This DLC pack includes the online and player versus computer mode.&nbsp;Subscribe to the newsletter and we notify you when the online mode or the versus computer mode is out.<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="http://admin.blaxrew-studios.vision" title="Buy for $∞"><i class="la la-money"></i></a><a class="action" href="#"></a>
+                    <p class="text-white-50 description">This DLC pack includes the online and player versus computer mode.&nbsp;Subscribe to the newsletter and we notify you when the online mode or the versus computer mode is out.<br></p><a data-toggle="tooltip" data-bss-tooltip="" class="action" href="http://admin.blaxrew-studios.vision" title="Buy for $∞"><i class="la la-money"></i></a><a class="action" href="#"></a>
                 </div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image005.png"></a>
                     <h3 class="name"><strong>Devils Hunt Boardgame</strong><br></h3>
-                    <p class="text-white-50 description">Download and start the software. With this game board and cards you are able to play it in real life. We make you an offer the offered price may change over time.<br><br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="/about.html#contact" title="Buy for $+∞"><i class="la la-money"></i></a>
+                    <p class="text-white-50 description">Download and start the software. With this game board and cards you are able to play it in real life. We make you an offer the offered price may change over time.<br><br></p><a data-toggle="tooltip" data-bss-tooltip="" class="action" href="/about.html#contact" title="Buy for $+∞"><i class="la la-money"></i></a>
                 </div>
             </div>
         </div>
