--- a/driving_simulator.html
+++ b/driving_simulator.html
@@ -54,16 +54,16 @@
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
 
-<body onload="SetDate(&#39;March 15, 2021&#39;)">
+<body onload="">
     <div class="footer-dark">
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
             <div class="container"><img src="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-2">
-                    <ul class="nav navbar-nav mr-auto">
+                    <ul class="navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"></li>
-                        <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Projects</a>
+                        <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
@@ -75,7 +75,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
-                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://bxs-admin.herokuapp.com" style="margin-bottom: 0px;">Open Dashboard</a></span>
+                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://bxs-admin.herokuapp.com/" style="margin-bottom: 0px;">Open Dashboard</a></span>
                 </div>
             </div>
         </nav>
@@ -108,16 +108,6 @@
             </div>
         </div>
     </div>
-    <div class="simple-slider">
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="bg-dark swiper-slide"><img src="assets/img/image0005%20-%20Kopie.png" style="background: url(&quot;assets/img/image0005%20-%20Kopie_222.jpg&quot;);width: 66%;margin-left: 17.5%;"></div>
-            </div>
-            <div class="swiper-pagination"></div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
-    </div>
     <div class="text-white bg-dark">
         <div class="container">
             <div class="row">
@@ -131,7 +121,7 @@
                         </ul>
                         <div class="tab-content">
                             <div class="tab-pane active" role="tabpanel" id="tab-1">
-                                <p class="text-left">A Unity 3D Game which is using URP. The driving simulator is made to train to drive with a trailer. Drive using different perspectives and train on specific places without to damage anything in real-life. Try to complete missions without damaging or getting damaged by anything. Decide you wether you want to drive at night or daytime. Just choose a car, a trailer and get to it with or without a steering wheel controller. (TMX Pro compatibility tested)&nbsp;</p>
+                                <p class="text-left">A Unity 3D Game which is using URP. The driving simulator is made to train to drive with a trailer. Drive using different perspectives and train on specific places without to damage anything in real-life. Try to complete missions without damaging or getting damaged by anything. Decide wether you want to drive at night or daytime. Just choose a car, a trailer and get to it with or without a steering wheel controller. (TMX Pro compatibility tested)&nbsp;</p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-2">
                                 <p class="text-left">The first release canditate of the alpha is out. Go and have fun with it.<br></p>
@@ -140,12 +130,27 @@
                                 <p class="text-left">In the future there will be more trailers to drive with. Scores may get tracked per user (global or local)<br></p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-4">
-                                <p class="text-left"><strong>PRE-ALPHA</strong><br>0.0.1<br>Released the application's foundation<br><br>0.0.2<br>Fix a collision bug<br><br>0.1-rc.01<br>We will not list the done stuff here. It's too much since the last version.<br><br>0.1-rc.02<br>Many<br><br>0.1-rc.03<br>Fix heavy performance issues<br><br>0.1-rc.04<br>Fix audio settings<br></p>
+                                <p class="text-left"><strong>PRE-ALPHA</strong><br>0.0.1<br>Released the application's foundation<br><br>0.0.2<br>Fix a collision bug<br><br><strong>ALPHA</strong><br>0.1-rc.01<br>We will not list the done stuff here. It's too much since the last version.<br><br>0.1-rc.02<br>Many<br><br>0.1-rc.03<br>Fix heavy performance issues<br><br>0.1-rc.04<br>Fix audio settings<br><br></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="bg-dark m-auto simple-slider">
+        <div class="bg-dark m-auto swiper-container">
+            <div class="bg-dark m-auto swiper-wrapper">
+                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/dsfs.png" style="height: 100%;"></div>
+                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/Main.png" style="height: 100%;"></div>
+                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/2.png" style="height: 100%;"></div>
+                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/Capture.png" style="height: 100%;"></div>
+                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/fvd,ljsluighbnjsgn.png" style="height: 100%;"></div>
+                <div class="bg-dark d-flex justify-content-center align-items-center align-content-center my-auto swiper-slide"><img class="my-auto" src="assets/img/Captadgfyfgjure.png" style="height: 100%;"></div>
+            </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
         </div>
     </div>
     <div class="bg-dark">
@@ -156,17 +161,17 @@
                         <div class="container">
                             <h1>Coming Soon</h1>
                             <div id="clockdiv">
-                                <div class="clock-wrapper"><span class="days"><strong>0    </strong><br> </span>
+                                <div class="clock-wrapper"><span class="days"><strong>0</strong><br> </span>
                                     <div class="smalltext">
                                         <p>Days </p>
                                     </div>
                                 </div>
-                                <div class="clock-wrapper"><span class="hours">0  </span>
+                                <div class="clock-wrapper"><span class="hours">0</span>
                                     <div class="smalltext">
                                         <p>Hours </p>
                                     </div>
                                 </div>
-                                <div class="clock-wrapper"><span class="minutes">0  </span>
+                                <div class="clock-wrapper"><span class="minutes">0</span>
                                     <div class="smalltext">
                                         <p>Minutes </p>
                                     </div>
@@ -191,15 +196,15 @@
                 <p class="text-center text-white-50">Here you find&nbsp; the needed links to buy or download the game</p>
             </div>
             <div class="row articles">
-                <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://dl.patchkit.net/d/7gimxx37pbdtjujqu8mmo" title="Download"></a><a class="action" href="https://dl.patchkit.net/d/7gimxx37pbdtjujqu8mmo"></a></div>
+                <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bss-tooltip="" class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1" title="Download"></a><a class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1"></a></div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/image0005%20-%20Kopie.png"></a>
                     <h3 class="name">Driving Simulator</h3>
-                    <p class="text-white-50 description">Download and get to it. Drive try for try and get better. Try it with connecting your TMX Pro to get a better result<br></p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://dl.patchkit.net/d/7gimxx37pbdtjujqu8mmo" title="Buy for $∞"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none">
+                    <p class="text-white-50 description">Download and get to it. Drive try for try and get better. Try it with connecting your TMX Pro to get a better result<br></p><a data-toggle="tooltip" data-bss-tooltip="" class="action" href="https://dl.patchkit.net/d/7gimxx37pbdtjujqu8mmo" title="Buy for $∞"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none">
                             <path d="M11 5C11 4.44772 11.4477 4 12 4C12.5523 4 13 4.44772 13 5V12.1578L16.2428 8.91501L17.657 10.3292L12.0001 15.9861L6.34326 10.3292L7.75748 8.91501L11 12.1575V5Z" fill="currentColor"></path>
                             <path d="M4 14H6V18H18V14H20V18C20 19.1046 19.1046 20 18 20H6C4.89543 20 4 19.1046 4 18V14Z" fill="currentColor"></path>
                         </svg></a><a class="action" href="#"></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="#" title="Buy for $+∞"></a></div>
+                <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bss-tooltip="" class="action" href="#" title="Buy for $+∞"></a></div>
             </div>
         </div>
     </div>
@@ -261,6 +266,7 @@
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/audioJS.js"></script>
     <script src="assets/js/Cookie-Banner.js"></script>
+    <script src="assets/js/countdown-timer.js"></script>
     <script src="assets/js/filterTable.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.jquery.min.js"></script>
     <script src="assets/js/Simple-Slider.js"></script>
