--- a/las.html
+++ b/las.html
@@ -59,11 +59,11 @@
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
             <div class="container"><img src="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-2">
-                    <ul class="nav navbar-nav mr-auto">
+                    <ul class="navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"></li>
-                        <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Projects</a>
+                        <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
@@ -75,7 +75,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
-                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://bxs-admin.herokuapp.com" style="margin-bottom: 0px;">Open Dashboard</a></span>
+                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://bxs-admin.herokuapp.com/" style="margin-bottom: 0px;">Open Dashboard</a></span>
                 </div>
             </div>
         </nav>
@@ -127,23 +127,26 @@
                 <div class="col-md-12" style="margin-top: 10px;">
                     <div>
                         <ul class="nav nav-tabs" role="tablist">
-                            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-1">Information</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-1">Information</a></li>
                             <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-2">Progress</a></li>
-                            <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-3">Plans</a></li>
+                            <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-3">Plans</a></li>
                             <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-4">Changelog</a></li>
                         </ul>
                         <div class="tab-content">
-                            <div class="tab-pane active" role="tabpanel" id="tab-1">
-                                <p class="text-left">This is a singleplayer third person controlled story adventure game.<br>Make tasks and make decisions wisely because they could lead you to the abyss. Go with or against the light. Now it's your turn. This game uses RTX!<br>Get the game as we release it if you want to know more about the story. Subscribe to the newsletter to get those information via mail.<br><br></p>
+                            <div class="tab-pane" role="tabpanel" id="tab-1">
+                                <p class="text-left">There is a world that is different from ours. If one distinguishes between good and evil, between heaven and hell, the inferno is not a burning existence like the inhabited planets.&nbsp;It is a place of darkness that engulfs the light, draws it into a darkness and extinguishes it, so that no one will see glimmers of light there.&nbsp;<br>Our world knows the lights and therefore the shadows.<br><br>This is a singleplayer third person controlled story adventure game.<br>Make tasks and make decisions wisely because they could lead you to the abyss. Go with or against the light. Now it's your turn. Get the game as we release it if you want to know more about the story. Subscribe to the newsletter to get those information via mail.<br><br></p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-2">
                                 <p class="text-left">The game is in progress the story is finished at the moment.<br>In designing and developing process.<br></p>
                             </div>
-                            <div class="tab-pane" role="tabpanel" id="tab-3">
+                            <div class="tab-pane active" role="tabpanel" id="tab-3">
                                 <p class="text-left">The future plans are the game itself.<br></p>
                             </div>
                             <div class="tab-pane" role="tabpanel" id="tab-4">
                                 <p class="text-left"><strong>TEST&nbsp; VERSION</strong><br>0.0.1<br>- Initial Commit<br><br>0.0.1a<br>- Beginnings of the Light Temple<br><br>0.0.2<br>- A complete new scene<br>- Start of a questing system<br>- Start of a interaction system<br>- Average player-movement system<br><br>0.0.3<br>- Improve graphics<br>- Add popup for quest completions<br>- Add animations tp "completed" popup<br><br>0.0.4<br>- Fix to the directional light and volume<br>- Add new stuff to the scene<br><br>0.0.5<br>- Change to third person controller<br>- Add animated player</p>
+                            </div>
+                            <div class="tab-pane" role="tabpanel" id="tab-5">
+                                <p>Tab content.</p>
                             </div>
                         </div>
                     </div>
@@ -194,15 +197,15 @@
                 <p class="text-center text-white-50">Here you find&nbsp; the needed links to buy or download the game</p>
             </div>
             <div class="row articles">
-                <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1" title="Download"></a><a class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1"></a></div>
+                <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bss-tooltip="" class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1" title="Download"></a><a class="action" href="https://www.dropbox.com/s/4u08kus4v6k8a4w/Devils%20Hunt%20Launcher%20Setup%201.1.exe?dl=1"></a></div>
                 <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/Banner%201%201920x1080.png"></a>
                     <h3 class="name">Lights And Shadows</h3>
-                    <p class="text-white-50 description">The main game with it's content is already playable for testers. Click on the download symbol below to go to the download of Lights And Shadows</p><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="https://bxs-admin.herokuapp.com" title="Buy for $∞"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none">
+                    <p class="text-white-50 description">The main game with it's content is already playable for testers. Click on the download symbol below to go to the download of Lights And Shadows</p><a data-toggle="tooltip" data-bss-tooltip="" class="action" href="https://bxs-admin.herokuapp.com" title="Buy for $∞"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none">
                             <path d="M11 5C11 4.44772 11.4477 4 12 4C12.5523 4 13 4.44772 13 5V12.1578L16.2428 8.91501L17.657 10.3292L12.0001 15.9861L6.34326 10.3292L7.75748 8.91501L11 12.1575V5Z" fill="currentColor"></path>
                             <path d="M4 14H6V18H18V14H20V18C20 19.1046 19.1046 20 18 20H6C4.89543 20 4 19.1046 4 18V14Z" fill="currentColor"></path>
                         </svg></a><a class="action" href="#"></a>
                 </div>
-                <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bs-tooltip="" class="action" href="#" title="Buy for $+∞"></a></div>
+                <div class="col-sm-6 col-md-4 item"><a href="#"></a><a data-toggle="tooltip" data-bss-tooltip="" class="action" href="#" title="Buy for $+∞"></a></div>
             </div>
         </div>
     </div>
