--- a/music_lib.html
+++ b/music_lib.html
@@ -59,11 +59,11 @@
         <nav class="navbar navbar-dark navbar-expand-md bg-dark navigation-clean-button">
             <div class="container"><img src="assets/img/BXS%20TRANSPARENT%20NON%20TEXT.png" width="5%" style="opacity: 1;margin-right: 0.5%;"><a class="navbar-brand" href="#">BlaXrew Studios</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-2">
-                    <ul class="nav navbar-nav mr-auto">
+                    <ul class="navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                         <li class="nav-item"></li>
-                        <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false">Projects</a>
+                        <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
@@ -75,7 +75,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="news.html">News</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Forum</a></li>
-                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://bxs-admin.herokuapp.com" style="margin-bottom: 0px;">Open Dashboard</a></span>
+                    </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://bxs-admin.herokuapp.com/" style="margin-bottom: 0px;">Open Dashboard</a></span>
                 </div>
             </div>
         </nav>
