--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
-                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
+                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="https://blackture.github.io/TheInvaders-Docs/">The Invaders</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://blaxrewstudios.github.io/mdscript-docs/">MD Script</a>
                                 <div class="dropdown-divider"></div>
@@ -105,7 +105,7 @@
     <div class="text-light bg-dark newsletter-subscribe">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center">Subscribe for our Newsletter</h2>
+                <h2 class="text-center" id="newsletter-subscribe">Subscribe for our Newsletter</h2>
                 <p class="text-center text-white-50">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
             </div>
             <form class="form-inline" data-bss-recipient="c6268884f198426de24f9a36bbd9ca7d" data-bss-subject="Newsletter Subs">
