--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
                         <li class="nav-item dropdown" href="projects.html"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown">Projects</a>
                             <div class="dropdown-menu"><a class="dropdown-item" href="projects.html">Overview</a>
                                 <div class="dropdown-divider"></div>
-                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="las.html">LaS</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
+                                <h6 class="dropdown-header">Games</h6><a class="dropdown-item" href="devils-hunt.html">Devils Hunt</a><a class="dropdown-item" href="https://github.com/blaxrewstudios/RCB">RCB</a><a class="dropdown-item" href="https://blackture.github.io/TheInvaders-Docs/">The Invaders</a><a class="dropdown-item" href="fallen_world.html">Fallen Wold</a><a class="dropdown-item" href="driving_simulator.html">Driving Simulator</a>
                                 <div class="dropdown-divider"></div>
                                 <h6 class="dropdown-header">Software</h6><a class="dropdown-item" href="https://blaxrewstudios.github.io/mdscript-docs/">MD Script</a>
                                 <div class="dropdown-divider"></div>
